* master

- In =org-mode=, when inserting the results of an asynchronously evaluated
  src-block, indent the results to match the surrounding indentation level.

- In =org-mode=, fix an issue when a src-block is nested within a list that
  would cause the entire list to be erased when asynchronously evaluating the
  src-block.

- Add new customizable variable ~jupyter-repl-echo-eval-p~ that causes the REPL
  to behave similarly to comint or ESS when evaluating code. Specifically, it
  causes any code that is sent to the underlying kernel to also be displayed as
  a REPL input cell. The previous behavior would only display the sent code as
  an input cell if it was explicitly typed in at the REPL.

- Add the new command ~jupyter-repl-clear-cells~ to clear all of the current
  input and output cells in a REPL buffer. Bound to ~C-c C-o~ by default in the
  REPL.

- Fix an issue where timeouts started using ~with-timeout~ would timeout when
  the kernel requests input from the user. The timeouts are now suspended in
  such cases.

- In =jupyter-R.el= handle the =isolated= metadata property of HTML results by
  opening up an external browser to display the result.

- Allow =:session= to be a remote file name for =org-mode= source blocks. When
  =:session= is a remote file name that doesn't end in =.json=, e.g.
  =/ssh:ec2:jl=, a new kernel is started on the remote host using the
  =jupyter kernel= command on that host. The local file name part serves to
  distinguish different sessions on the remote host.

- Add the new commands ~jupyter-repl-history-previous-matching~ and
  ~jupyter-repl-history-next-matching~, bound to ~C-c M-r~ and ~C-c M-s~ in the
  REPL.

- In ~jupyter-with-display-buffer~, ~let~ bind ~jupyter-current-client~. This
  fixes an issue where kernel language specific methods were not overriding the
  defaults when attempting to display the contents of =display-data= messages
  received from a kernel.
