@@ -20,6 +20,7 @@ An interface to communicate with Jupyter kernels in Emacs.
   - [[#repl][REPL]]
   - [[#org-mode-source-blocks][=org-mode= source blocks]]
   - [[#customizable-variables-available-for-all-frontends][Customizable variables available for all frontends]]
+- [[#integration-with-emacsclient][Integration with =emacsclient=]]
 - [[#api][API]]
   - [[#naming-conventions][Naming conventions]]
   - [[#overview][Overview]]
@@ -282,6 +283,27 @@ keybindings for interacting with the REPL:
 | =C-c C-r=   | =jupyter-repl-restart-kernel=      |
 | =C-c C-s=   | =jupyter-repl-scratch-buffer=      |
 | =C-c M-:=   | =jupyter-eval-string=              |
+
+**** Integration with =emacsclient=
+
+If code is sent to a kernel that is able to open files using the =EDITOR=
+environment variable and if the =EDITOR= opens files using =emacsclient=, the
+files opened are automatically associated with the corresponding REPL. This
+behavior is most useful, for example, when using the =edit= function in IJulia.
+
+To enable =server-mode= in Emacs you should have something like the following
+in your Emacs configuration before starting any kernels.
+
+#+BEGIN_SRC elisp
+(server-mode 1)
+(setenv "EDITOR" "emacsclient")
+#+END_SRC
+
+Note this probably wont work properly when there are multiple competing clients
+sending requests to their underlying kernels that want to open files.
+
+See =jupyter-server-mode-set-client=.
+
 *** =jupyter-repl-persistent-mode=
 
 A global minor mode that will persist a kernel connection to a buffer about to
@@ -317,6 +339,7 @@ per client.
 
 This feature is currently considered experimental and has only been tested for
 simple uses of widgets. See [[id:B15FF43B-114C-4D73-B69C-2095F108EBBB][=jupyter-widget-client=]].
+
 ** =org-mode= source blocks
 
 For users of =org-mode=, integration with =org-babel= is provided through the
