@@ -811,6 +811,23 @@
     (let ((jupyter-current-client client))
       (should (equal (jupyter-eval "1 + 1") "2")))))
 
+(defvar server-mode)
+(defvar server-buffer)
+
+(ert-deftest jupyter-server-mode-set-client ()
+  :tags '(client)
+  (let (server-buffer)
+    (with-temp-buffer
+      (setq server-buffer (buffer-name))
+      (let ((server-mode t)
+            (client (jupyter-kernel-client)))
+        (should-not jupyter-current-client)
+        (with-temp-buffer
+          (jupyter-server-mode-set-client client 0.01))
+        (should jupyter-current-client)
+        (sleep-for 0.02)
+        (should-not jupyter-current-client)))))
+
 ;;; IOloop
 
 (ert-deftest jupyter-ioloop-lifetime ()
